# foo_hemusic

./: .gitignore  CLAUDE.md  Directory.Build.targets  README.md
.claude/: settings.json
.claude/commands/: codex.md  gemini.md  review.md
.claude/hooks/: clang-format-postedit.sh  clang-tidy-postedit.sh  clang-tidy-stop.sh  clazy-postedit.sh  clazy-stop.sh  legacy-cli-pretool.sh
.claude/rules/: gemini-usage.md
.github/workflows/: build.yml
foo_hemusic/: .clang-format  .clang-tidy  CMakeLists.txt  DONE.md  PLAN.md  vcpkg.json
foo_hemusic/scripts/: _vcvars.bat  build.bat  configure.bat
foo_hemusic/src/: component.cpp
foo_hemusic/src/api/: album.h  album_detail.h  artist.h  artist_detail.h  discover.h  mv.h  platforms.h  playlist.h  playlist_detail.h  playlist_square.h  radio.h  ranking.h  search.h  song.h  user.h
foo_hemusic/src/auth/: device_info.cpp  device_info.h  login_flow.cpp  login_flow.h  oauth_flow.cpp  oauth_flow.h  token_store.cpp  token_store.h
foo_hemusic/src/core/: config.cpp  config.h  session.cpp  session.h
foo_hemusic/src/net/: api_client.cpp  api_client.h  http_client.cpp  http_client.h  json_codec.h  url_codec.h
foo_hemusic/src/playback/: hemusic_url.h  url_resolver.cpp  url_resolver.h
foo_hemusic/src/ui/: cover_cache.cpp  cover_cache.h  d2d.cpp  d2d.h  image_cache.cpp  image_cache.h  main_panel.cpp  nav.cpp  nav.h  theme.cpp  theme.h
foo_hemusic/src/ui/pages/: album_detail_page.cpp  album_detail_page.h  artist_detail_page.cpp  artist_detail_page.h  detail_layout.h  discover_layout.h  discover_page.cpp  discover_page.h  login_dlg.cpp  login_dlg.h  playlist_detail_layout.h  playlist_detail_page.cpp  playlist_detail_page.h  radio_detail_page.cpp  radio_detail_page.h  radio_layout.h  radio_page.cpp  radio_page.h  search_layout.h  search_page.cpp  search_page.h  section_render.cpp  section_render.h
foo_hemusic/tests/: album_detail_test.cpp  api_client_test.cpp  artist_detail_test.cpp  artist_model_test.cpp  detail_layout_test.cpp  device_info_test.cpp  discover_layout_test.cpp  discover_test.cpp  hemusic_url_test.cpp  http_client_test.cpp  image_cache_test.cpp  list_models_test.cpp  login_flow_test.cpp  nav_test.cpp  oauth_flow_test.cpp  platforms_test.cpp  playlist_detail_layout_test.cpp  playlist_detail_test.cpp  playlist_square_test.cpp  radio_layout_test.cpp  radio_test.cpp  ranking_test.cpp  search_layout_test.cpp  search_test.cpp  session_test.cpp  song_model_test.cpp  token_store_test.cpp  url_codec_test.cpp  url_resolver_test.cpp  user_info_test.cpp
wtl/AppWizard/: Setup.js
wtl/Include/: atlctrlx.h
wtl/Notes/: ReadMe.html
wtl/Samples/Alpha/: mainfrm.h
wtl/Samples/BmpView/: mainfrm.h
wtl/Samples/GuidGen/: maindlg.h
wtl/Samples/MDIDocVw/: mainfrm.h
wtl/Samples/WTLExplorer/: MainFrm.cpp  mainfrm.h
